--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
   "dependencies": {
+    "@tailwindcss/cli": "^4.0.9",
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "express-validator": "^7.2.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "pg": "^8.13.3"
+    "pg": "^8.13.3",
+    "tailwindcss": "^4.0.9"
   },
   "name": "members-only",
   "version": "1.0.0",
   "description": "Message board web application",
   "main": "app.js",
-  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:css": "npx @tailwindcss/cli -i ./input.css -o ./public/styles.css --watch"
   },
   "repository": {
     "type": "git",
